[project]
name = "nabor"
version = "0.1.0"
description = "TUI-тренажёр печати по книгам (fb2/txt)"
requires-python = ">=3.11"
dependencies = ["textual"]

[project.scripts]
nabor = "nabor.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nabor"]
