[project]
name = "nabor"
version = "0.1.0"
description = "TUI typing trainer that types your books (fb2/txt/md)"
requires-python = ">=3.11"
license = "0BSD"
license-files = ["LICENSE"]
dependencies = ["textual"]

[project.scripts]
nabor = "nabor.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nabor"]
